src/test/ui/async-await/issue-66731.rs
fn foo() {}

async fn bar() -> std::io::Result<()> {
    foo().await; //~ ERROR `()` is not a future
    std::io::Result::Ok(())
}

fn main() {}
